# scenario-execution-server

./: .gitignore  .gitmodules  README.md
scenario_execution_remote/: MANIFEST.in  setup.cfg
scenario_execution_remote/scenario_execution_remote/: __init__.py  get_osc_library.py  protocol.py  remote_modifier.py
scenario_execution_remote/scenario_execution_remote/lib_osc/: remote.osc
scenario_execution_server/: setup.cfg
scenario_execution_server/scenario_execution_server/: __init__.py  action_runner.py  server.py
scenario_execution_server_ros/: package.xml  setup.cfg  setup.py
scenario_execution_server_ros/scenario_execution_server_ros/: server_ros.py
