[metadata]
name = scenario_execution_remote
version = 0.1.0
description = Client-side remote modifier for scenario-execution
license = Apache-2.0

[options]
packages = find_namespace:
install_requires =
    scenario_execution
    pyzmq
    msgpack
include_package_data = True

[options.package_data]
scenario_execution_remote =
    lib_osc/*.osc

[options.entry_points]
scenario_execution.modifiers =
    remote = scenario_execution_remote.remote_modifier:create_remote_modifier
scenario_execution.osc_libraries =
    remote = scenario_execution_remote.get_osc_library:get_osc_library
