[metadata]
name = scenario_execution_server
version = 0.1.0
description = Remote action execution server for scenario-execution
license = Apache-2.0

[options]
packages = find:
install_requires =
    scenario_execution
    pyzmq
    msgpack

[options.entry_points]
console_scripts =
    scenario_execution_server = scenario_execution_server.server:main
