<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_execution_server_ros</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for scenario-execution-server</description>
  <maintainer email="scenario-execution@intel.com">Frederik Pasch</maintainer>
  <license>Apache-2.0</license>

  <depend>scenario_execution_server</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pyzmq</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
