[metadata]
name = scenario_execution_server_ros
version = 0.1.0
description = ROS2 wrapper for scenario-execution-server
license = Apache-2.0

[options]
packages = find:
install_requires =
    scenario_execution_server
    rclpy

[options.entry_points]
console_scripts =
    scenario_execution_server_ros = scenario_execution_server_ros.server_ros:main

[develop]
script_dir=$base/lib/scenario_execution_server_ros
[install]
install_scripts=$base/lib/scenario_execution_server_ros
